fix: update rich-text utility to use `wrap-break-word` for improved paragraph behavior

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -65,7 +65,7 @@
 @utility rich-text {
     @apply prose text-lg max-w-none prose-slate dark:prose-invert leading-8
         /* paragraph */
-    prose-p:break-all lg:prose-p:break-normal
+    prose-p:wrap-break-word
         /*  heading  */
     prose-headings:font-medium prose-headings:text-emerald-600 dark:prose-headings:text-lividus-500
     prose-h2:my-4 prose-h2:py-4 prose-h2:relative
